--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,216 @@
+/* ---------- Variables ---------- */
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --primary: #383e56;
+  --white-text: white;
+  --accent: #ff7f50;
+  --primary-font: "Montserrat", sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
+/* ---------- Global styles ---------- */
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: white;
+  font-family: var(--primary-font);
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 300%;
+  color: var(--primary);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+h1 span {
+  font-size: 50%;
+  font-family: var(--primary-font);
+  margin-left: 20%;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+h2 {
+  font-size: 200%;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 150%;
+}
+
+p {
+  line-height: 1.3;
+  padding-bottom: 10px;
+}
+
+/* ---------- Upper navigation ---------- */
+header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--primary);
+  height: 50px;
+  color: var(--white-text);
+}
+
+header img {
+  height: 40px;
+  width: auto;
+  vertical-align: center;
+}
+
+header .title-text {
+  display: inline;
+  vertical-align: center;
+  font-size: 1.25em;
+  color: #c7cfb7;
+}
+
+.title-text {
+  font-family: Pacifico, cursive;
+}
+
+nav {
+  text-align: right;
+}
+
+nav a {
+  color: var(--white-text);
+  text-decoration: none;
+  padding: 0 10px;
+}
+
+nav a:hover {
+  color: var(--accent);
+}
+
+/* ---------- Above-the-fold ---------- */
+.atf {
+  height: 360px;
+}
+
+.atf img {
+  margin: 0 auto;
+}
+
+/* ---------- Main body content ---------- */
+main {
+  padding: 5px;
+}
+
+main section {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+
+main section .section-title {
+  min-width: 320px;
+  border-right: 4px solid var(--primary);
+  padding: 0 50px 0 15px;
+}
+
+main section div {
+  flex: 4;
+  padding: 0 0 0 25px;
+}
+
+/* ---------- Project grid/cards ---------- */
+.project-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1em;
+  grid-auto-rows: minmax(200px, auto);
+  min-width: 320px;
+}
+
+.project-grid a {
+  background-size: cover;
+}
+
+.grid-card {
+  background-color: var(--accent);
+}
+
+.grid-card:hover {
+  border: 5px solid var(--accent);
+}
+
+.main-card {
+  grid-column: 1 / 3;
+}
+
+.grid-card div {
+  background-color: var(--primary);
+  color: var(--white-text);
+  display: inline-block;
+  padding: 5px;
+}
+
+#project-1 {
+  background-image: url("../images/horiseon.jpg");
+}
+
+#project-2 {
+  background-image: url("../images/to-do-list.jpg");
+}
+
+#project-3 {
+  background-image: url("../images/weather-app.jpg");
+}
+
+#project-4 {
+  background-image: url("../images/blog.jpg");
+}
+
+#project-5 {
+  background-image: url("../images/holiday-db.jpg");
+}
+
+/* ---------- Footer navigation & contact ---------- */
+footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--primary);
+  height: 100px;
+  color: var(--white-text);
+}
+
+/* ---------- Media queries ---------- */
+@media screen and (max-width: 768px) {
+  header {
+    display: block;
+    height: 120px;
   }
-  a:hover {
-    color: #747bff;
+
+  header nav {
+    margin-left: 45px;
   }
-  button {
-    background-color: #f9f9f9;
+
+  nav {
+    padding: 5px 0;
+    text-align: left;
+  }
+
+  nav a {
+    display: block;
+    padding: 2px 0;
+  }
+
+  header nav,
+  main section div,
+  footer nav {
+    flex: 100%;
+  }
+
+  main section .section-title {
+    border-right: none;
+    padding: 0;
+  }
+
+  main section div {
+    padding: 0;
+  }
+
+  footer {
+    height: 150px;
   }
 }
